--- a/src/app.scss
+++ b/src/app.scss
@@ -45,6 +45,7 @@ body {
   .title-main {
     height: 340px;
     width: 190px;
+    transition: 0.3s;
     span {
       font-size: 10px;
     }
@@ -79,6 +80,9 @@ body {
       color: black;
     }
   }
+}
+.title-main:hover {
+  scale: 1.03;
 }
 .recently-added-anime {
   .recetly-added-title {
