--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -42,7 +42,7 @@
   padding-left: 30px;
   border-bottom: 1px solid #3ce3e8;
   padding-right: 5px;
-  z-index: 1;
+  z-index: 10000;
   position: relative;
 }
 .title-info .select-wrapper .select-trigger .trigger-content,
@@ -75,25 +75,14 @@
 }
 .title-info .select-wrapper .option {
   background-color: rgba(6, 75, 140, 0.9490196078);
+  transition: 0.3s;
+}
+.title-info .select-wrapper .option:hover {
+  background-color: #064b8c;
 }
 .title-info .select-options {
   overflow: hidden;
   transition: 1s;
-}
-.title-info .title-chose-option__indicator {
-  display: none;
-}
-.title-info .title-chose-condition:focus {
-  outline: none;
-}
-.title-info .title-chose-option__menu {
-  background-color: #05315a;
-}
-.title-info .title-chose-option__option {
-  width: 300px;
-  height: 50px;
-  color: white;
-  background-color: #05315a;
 }
 .title-info .title-text-info {
   display: flex;
@@ -121,13 +110,55 @@
   margin-bottom: 15px;
 }
 
-.title-view-order {
+.view-order-wraper {
   width: 300px;
-  height: 50px;
   margin-top: 20px;
   margin-bottom: 20px;
+  height: 50px;
+  z-index: 1000;
+}
+.view-order-wraper .view-order-trigger {
+  width: 300px;
+  height: 50px;
+  background-color: #05315a;
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  padding-left: 30px;
+  border-bottom: 1px solid #3ce3e8;
+  padding-right: 5px;
+  z-index: 1000;
+  position: relative;
+  color: white;
+  font-size: 18px;
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+}
+.view-order-wraper .view-order-list {
+  transition: 1s;
+  overflow: hidden;
+  padding: 0 15px 0 10px;
+  width: 300px;
+  background-color: #05315a;
+  position: relative;
 }
 
+.view-oreder-element {
+  position: relative;
+  z-index: 1000;
+  margin-left: 20px;
+  margin-bottom: 5px;
+}
+
+.view-oreder-element.current {
+  color: #3ce3e8;
+}
+
+.player-wraper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 .player-wraper .player,
 .player-wraper .player-placeholder {
   width: 1205px;
@@ -144,6 +175,9 @@
   text-align: center;
   padding-top: 13px;
   font-size: 20px;
+  color: #fff;
+  border: none;
+  align-items: center;
 }
 
 .just-player {
@@ -151,21 +185,47 @@
   color: black;
 }
 
-.player-chose {
+.player-chose-wraper {
+  height: 48px;
+}
+
+.player-chose,
+.dub-chose {
   background: rgba(5, 49, 90, 0.6);
   height: 48px;
   display: flex;
   padding-left: 40px;
   padding-bottom: 5px;
 }
-.player-chose .player-name {
+.player-chose .player-name,
+.dub-chose .player-name {
   width: 80px;
 }
-.player-chose .little-dievider {
+.player-chose .little-dievider,
+.dub-chose .little-dievider {
   width: 2px;
   height: 29px;
   background-color: #05315a;
   margin-left: 40px;
+}
+
+.player-options {
+  transition: height 0.6s;
+  overflow: hidden;
+}
+
+.player-option {
+  width: 200px;
+  height: 50px;
+  background-color: rgba(6, 75, 140, 0.95);
+  position: relative;
+  z-index: 100;
+  transition: 0.3s;
+  border-bottom: 1px solid #3ce3e8;
+}
+
+.player-option:hover {
+  background-color: #05315a;
 }
 
 .title-header {
@@ -175,7 +235,7 @@
   display: inline-flex;
   gap: 15px;
   height: 50px;
-  width: 100%;
+  width: 1205px;
   align-items: center;
 }
 
@@ -207,28 +267,32 @@
   color: black;
 }
 
-.comments.wraper {
+.comments-wraper {
   width: 1205px;
   height: -moz-fit-content;
   height: fit-content;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .comments-styles {
   display: flex;
-  height: 70px;
+  height: 50px;
   gap: 5px;
   background-color: #05315a;
-  padding-top: 10px;
+  padding-top: 5px;
+  width: 1205px;
 }
 .comments-styles .style {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 
 .comment-input {
-  width: 1270px;
+  width: 1205px;
   height: 150px;
   resize: none;
   background: #064b8c;
@@ -272,7 +336,7 @@
   background-color: #05315a;
   display: flex;
   flex-direction: column;
-  width: 1250px;
+  width: 1205px;
   height: -moz-fit-content;
   height: fit-content;
   margin-left: auto;
@@ -283,7 +347,7 @@
   padding: 5px;
 }
 .comments .comment {
-  width: 1200px;
+  width: 1190px;
   height: 150px;
   background-color: #064b8c;
 }
