--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -93,4 +93,11 @@
   height: 50px;
   width: 50px;
   margin-left: 15px;
+}
+
+.aunth-buttons {
+  margin-left: 20px;
+}
+.aunth-buttons a {
+  margin-left: 40px;
 }/*# sourceMappingURL=header.css.map */
