upgrade comments and more

--- a/src/app.scss
+++ b/src/app.scss
@@ -36,19 +36,21 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
 }
 .season-anime {
-  width: max-content;
+  width: fit-content;
+
   .season-anime-title {
     margin-bottom: 25px;
   }
 }
 .season-titles,
 .recently-added-titles {
-  width: 1520px;
-  height: 370px;
+  min-width: 300px;
+  max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  height: 380px;
   background-color: rgba(6, 75, 140, 0.8);
-  padding: 0 0 20px 20px;
+  padding: 0 20px 20px 20px;
   display: flex;
   gap: 25px;
   border-radius: 10px;
@@ -129,12 +131,12 @@ body::-webkit-scrollbar-thumb {
   }
 }
 .recently-added-titles {
-  width: 1370px;
   height: fit-content;
   background: none;
   gap: 30px;
   display: flex;
   align-content: flex-start;
+  max-width: 1370px;
 }
 .devider {
   height: 2px;
@@ -143,4 +145,24 @@ body::-webkit-scrollbar-thumb {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
+}
+@media (max-width: 1100px) {
+  .season-titles {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .season-titles {
+    height: 720px;
+    overflow: hidden;
+    .title-main {
+      width: 340px;
+      height: 125px;
+      .poster {
+        width: 100px;
+        height: 125px;
+      }
+    }
+  }
+  .recently-added-titles {
+  }
 }
