--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .season-anime {
-  width: -moz-max-content;
-  width: max-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .season-anime .season-anime-title {
   margin-bottom: 25px;
@@ -46,12 +46,14 @@ body::-webkit-scrollbar-thumb {
 
 .season-titles,
 .recently-added-titles {
-  width: 1520px;
-  height: 370px;
+  min-width: 300px;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  height: 380px;
   background-color: rgba(6, 75, 140, 0.8);
-  padding: 0 0 20px 20px;
+  padding: 0 20px 20px 20px;
   display: flex;
   gap: 25px;
   border-radius: 10px;
@@ -142,13 +144,13 @@ body::-webkit-scrollbar-thumb {
 }
 
 .recently-added-titles {
-  width: 1370px;
   height: -moz-fit-content;
   height: fit-content;
   background: none;
   gap: 30px;
   display: flex;
   align-content: flex-start;
+  max-width: 1370px;
 }
 
 .devider {
@@ -158,4 +160,23 @@ body::-webkit-scrollbar-thumb {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
+}
+
+@media (max-width: 1100px) {
+  .season-titles {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .season-titles {
+    height: 720px;
+    overflow: hidden;
+  }
+  .season-titles .title-main {
+    width: 340px;
+    height: 125px;
+  }
+  .season-titles .title-main .poster {
+    width: 100px;
+    height: 125px;
+  }
 }/*# sourceMappingURL=app.css.map */
