--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,6 +8,8 @@
   border-bottom: 2px solid #3ce3e8;
   align-items: center;
   font-family: "Inter", sans-serif;
+  justify-content: center;
+  gap: 25px;
   margin-bottom: 40px;
 }
 .header a {
@@ -15,15 +17,14 @@
   font-style: normal;
   font-size: 22px;
   text-decoration: none;
-}
-.header .header-cat {
-  margin-left: 90px;
-}
-.header .header-random {
-  margin-left: 40px;
+  margin-left: 20px;
 }
 .header .active {
   color: #0e1df3;
+}
+
+.header-mobile-menu {
+  display: none;
 }
 
 .logo {
@@ -31,7 +32,16 @@
   width: max-content;
   height: 70px;
   display: flex;
-  margin-left: 350px;
+}
+
+.logo::before {
+  content: " ";
+  width: 10px;
+  background-color: #3ce3e8;
+  height: 36px;
+  border-radius: 3px;
+  position: relative;
+  top: 18px;
 }
 
 .img-background {
@@ -58,10 +68,8 @@
   font-size: 18px;
   border-radius: 3px;
   padding: 5px;
-  width: 200px;
+  width: 135px;
   text-align: end;
-  position: relative;
-  right: 68px;
   padding-right: 10px;
   font-family: "Atomic Age", cursive;
 }
@@ -74,7 +82,6 @@
   height: 40px;
   color: white;
   font-size: 23px;
-  margin-left: 30px;
 }
 
 .header-profile {
@@ -96,8 +103,19 @@
 }
 
 .aunth-buttons {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 .aunth-buttons a {
-  margin-left: 40px;
+  margin-left: 20px;
+}
+
+@media (max-width: 1100px) {
+  .header-mobile-menu {
+    display: inline-flex;
+  }
+  .input-title,
+  .nav-buttons,
+  .aunth-buttons {
+    display: none;
+  }
 }/*# sourceMappingURL=header.css.map */
