--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,28 +8,37 @@
   border-bottom: 2px solid #3ce3e8;
   align-items: center;
   font-family: "Inter", sans-serif;
+  justify-content: center;
+  gap: 25px;
   a {
     color: white;
     font-style: normal;
     font-size: 22px;
     text-decoration: none;
+    margin-left: 20px;
   }
-  .header-cat {
-    margin-left: 90px;
-  }
-  .header-random {
-    margin-left: 40px;
-  }
+
   margin-bottom: 40px;
   .active {
     color: #0e1df3;
   }
 }
+.header-mobile-menu {
+  display: none;
+}
 .logo {
   width: max-content;
   height: 70px;
   display: flex;
-  margin-left: 350px;
+}
+.logo::before {
+  content: " ";
+  width: 10px;
+  background-color: #3ce3e8;
+  height: 36px;
+  border-radius: 3px;
+  position: relative;
+  top: 18px;
 }
 .img-background {
   background-color: #3ce3e8;
@@ -53,10 +62,8 @@
   font-size: 18px;
   border-radius: 3px;
   padding: 5px;
-  width: 200px;
+  width: 135px;
   text-align: end;
-  position: relative;
-  right: 68px;
   padding-right: 10px;
   font-family: "Atomic Age", cursive;
 }
@@ -68,7 +75,6 @@
   height: 40px;
   color: white;
   font-size: 23px;
-  margin-left: 30px;
 }
 .header-profile {
   margin-left: 110px;
@@ -86,8 +92,18 @@
   margin-left: 15px;
 }
 .aunth-buttons {
-  margin-left: 20px;
+  margin-left: 10px;
   a {
-    margin-left: 40px;
+    margin-left: 20px;
+  }
+}
+@media (max-width: 1100px) {
+  .header-mobile-menu {
+    display: inline-flex;
+  }
+  .input-title,
+  .nav-buttons,
+  .aunth-buttons {
+    display: none;
   }
 }
