--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -62,6 +62,12 @@
   padding-right: 5px;
   z-index: 10000;
   position: relative;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.title-info .select-wrapper .select-trigger .option:hover,
+.title-info .select-wrapper .option .option:hover {
+  background-color: rgba(8, 100, 185, 0.6705882353);
 }
 .title-info .select-wrapper .select-trigger .trigger-content,
 .title-info .select-wrapper .select-trigger .option-content,
@@ -100,7 +106,7 @@
 }
 .title-info .select-options {
   overflow: hidden;
-  transition: 1s;
+  transition: 0.6s;
 }
 .title-info .title-text-info {
   display: flex;
@@ -151,9 +157,10 @@
   color: white;
   font-size: 18px;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+  cursor: pointer;
 }
 .view-order-wraper .view-order-list {
-  transition: 1s;
+  transition: 0.6s;
   overflow-y: scroll;
   padding: 0 15px 0 10px;
   width: 300px;
@@ -228,6 +235,7 @@
   padding-right: 5px;
   z-index: 100;
   position: relative;
+  cursor: pointer;
 }
 .player-chose .little-dievider,
 .dub-chose .little-dievider {
@@ -259,6 +267,7 @@
   border: none;
   border-bottom: 1px solid #3ce3e8;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .player-option:hover,
@@ -304,6 +313,7 @@
   align-items: center;
   justify-content: center;
   transition: 0.3s;
+  cursor: pointer;
 }
 .episode-wraper .episode:hover {
   background-color: #3c87e8;
@@ -335,6 +345,7 @@
 .comments-styles .style {
   width: 40px;
   height: 40px;
+  cursor: pointer;
 }
 
 .comment-input {
