--- a/src/components/catalogue-page/catalogue-page.scss
+++ b/src/components/catalogue-page/catalogue-page.scss
@@ -105,6 +105,14 @@
   font-size: 16px;
   align-items: center;
   padding-left: 5px;
+  background-color: inherit;
+  border: none;
+  color: white;
+  font-family:
+    Century Gothic,
+    CenturyGothic,
+    AppleGothic,
+    sans-serif;
   .option-checkbox {
     display: inline-flex;
     width: 16px;
